fix(shuffle): toList() method was creating an immutable array -> cannot shuffle.